--- a/GRPO_From_Scratch_Multi_GPU_DataParallel_Qwen_2_5_1_5B_Instruct.ipynb
+++ b/GRPO_From_Scratch_Multi_GPU_DataParallel_Qwen_2_5_1_5B_Instruct.ipynb
@@ -237,7 +237,7 @@
         "set_random_seed(42)\n",
         "\n",
         "# Set environment variables for Weights & Biases (wandb) logging\n",
-        "os.environ[\"WANDB_API_KEY\"] = \"71d1ff6b59a032409761d4581aeb8c0372b8e47c\"\n",
+        "os.environ[\"WANDB_API_KEY\"] = \"USE YOUR KEY\"\n",
         "os.environ[\"WANDB_PROJECT\"] = \"GRPO-Qwen-1.5-Instruct-Multi-GPU\""
       ]
     },
