--- a/GRPO_From_Scratch_Multi_GPU_DataParallel_Qwen_2_5_1_5B_Instruct.ipynb
+++ b/GRPO_From_Scratch_Multi_GPU_DataParallel_Qwen_2_5_1_5B_Instruct.ipynb
@@ -7501,7 +7501,7 @@
         "id": "43a20bf1-2d7d-47a0-b81c-e665d0de078a"
       },
       "source": [
-        "The above graphs show that the model learns: the average reward plateaued around 2.25 (with the theoretical maximum being 0.8 + 2.0 = 2.8). This is quite high compared to the average reward of 1.4 achieved by Qwen-2.5-0.5B-Instruct we fineduned [here](https://github.com/aburkov/theLMbook/blob/main/GRPO_Qwen_0_5_Instruct.ipynb).\n",
+        "The above graphs show that the model learns: the average reward plateaued around 2.25 (with the theoretical maximum being 0.8 + 2.0 = 2.8). This is quite high compared to the average reward of 1.4 achieved by Qwen-2.5-0.5B-Instruct we finetuned [here](https://github.com/aburkov/theLMbook/blob/main/GRPO_Qwen_0_5_Instruct.ipynb).\n",
         "\n",
         "Using a larger model and allowing for much longer generations will increase the model's ability to learn to generate the correct answers more often. However, to train a larger model, one need to distribute not only the data across multiple GPUs, but also parts of the models, by using such model parallelism tools as DeepSpeed or FSDP (Fully Sharded Data Parallel).\n",
         "\n",
